--- a/templates/ng/t.html
+++ b/templates/ng/t.html
@@ -13,6 +13,18 @@
 
     <style>
         * { color: #fff }
+        .vcontainer { display: table !important; height: 100% }
+        .vcontent { display: table-cell; vertical-align: middle; height: 100% }
+        .rounded-border { border: 1px solid #60bd22; padding: 3px; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
+        @font-face {
+            font-family:'ClimaconsRegular';
+            src: url('/static/fonts/climacons-webfont.eot');
+            src: url('/static/fonts/climacons-webfont.eot?#iefix') format('embedded-opentype'),
+                 url('/static/fonts/climacons-webfont.woff') format('woff'),
+                 url('/static/fonts/climacons-webfont.ttf') format('truetype');
+            font-weight: normal;
+            font-style: normal;
+        }
     </style>
 </head>
 <body class="aqi-green" style="height: 100%">
@@ -68,12 +80,13 @@
     </div><!-- /.container-fluid -->
 </nav>
 
-<div class="container" style="height: 88%">
+
+<div class="container" style="height: 89%">
     <div class="row aqi-yellow" style="height: 48%">
         <div class="col-xs-12">
             <div class="row" style="padding: 30px; color: #eee; font-size: 120%">Now</div>
-            <div class="row" style="padding: 20px 0">
-                <div class="col-xs-5" style="padding: 0"><img src="/static/img/climacons/svg/Cloud-Sun.svg"/></div>
+            <div class="row" style="padding: 0">
+                <div class="col-xs-5" style="padding: 0"><img src="/static/img/climacons/svg/Cloud-Sun.svg"/> <span style="font-family: 'ClimaconsRegular', sans-serif">AaBbCcDdEeFfGgHh1234</span></div>
                 <div class="col-xs-7">
                     <div class="row">&nbsp;</div>
                     <div class="row" style="font-size: 140%">
@@ -88,28 +101,45 @@
     </div>
     <div class="row" style="background-color: #333; height: 12%">
         <div class="col-xs-12" style="height: 100%">
-            <div class="row" style="height: 100%">
-                <div class="col-xs-4" style="font-size: 120%; top: 32%">PM2.5 <span style="border: 1px solid #60bd22; padding: 3px">31</span></div>
-                <div class="col-xs-4" style="font-size: 120%; top: 32%">Ozone <span style="border: 1px solid #60bd22; padding: 3px">22</span></div>
-                <div class="col-xs-4 text-right" style="font-size: 120%; top: 17%">
-                    <div style="display: inline-block; text-align: center">
-                        <div><span class="glyphicon glyphicon-stats"></span></div>
-                        <div style="margin-top: -5px"><span style="font-size: 90%">Details</span></div>
+            <div class="row" style="height: 100%; font-size: 120%">
+                <div class="col-xs-4 vcontainer">
+                    <div class="vcontent">
+                        <div>PM2.5 <span class="rounded-border">31</span></div>
+                    </div>
+                </div>
+                <div class="col-xs-4 vcontainer">
+                    <div class="vcontent">
+                        <div>Ozone <span class="rounded-border">22</span></div>
+                    </div>
+                </div>
+                <div class="col-xs-4 text-right vcontainer">
+                    <div class="vcontent">
+                        <div style="display: inline-block; text-align: center">
+                            <div><span class="glyphicon glyphicon-stats"></span></div>
+                            <div style="margin-top: -5px"><span style="font-size: 90%">Details</span></div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="row aqi-red" style="height: 20%">
-        <div class="col-xs-6" style="font-size: 150%; top: 35%">Today</div>
-        <div class="col-xs-6 text-right" style="font-size: 100%; top: 40%">Unhealthy</div>
+        <div class="col-xs-6 vcontainer">
+            <div class="vcontent" style="font-size: 150%">Today</div>
+        </div>
+        <div class="col-xs-6 text-right vcontainer">
+            <div class="vcontent">Unhealthy</div>
+        </div>
     </div>
     <div class="row aqi-maroon" style="height: 20%">
-        <div class="col-xs-6" style="font-size: 150%; top: 35%">Tomorrow</div>
-        <div class="col-xs-6 text-right" style="font-size: 100%; top: 40%">Very Unhealthy</div>
+        <div class="col-xs-6 vcontainer">
+            <div class="vcontent">Tomorrow</div>
+        </div>
+        <div class="col-xs-6 text-right vcontainer">
+            <div class="vcontent">Very Unhealthy</div>
+        </div>
     </div>
 </div>
-
 
 </body>
 </html>
