--- a/aircanary/places/templates/places/home.html
+++ b/aircanary/places/templates/places/home.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load place_extras %}
 <!DOCTYPE html>
 <html style="height: 100%">
 <head>
@@ -79,7 +80,7 @@
         <div class="col-xs-12">
             <div class="row" style="padding: 20px; color: #eee; font-size: 120%">Currently</div>
             <div class="row" style="padding: 0">
-                <div class="col-xs-5"><span class="fs1 climacon cloud sun" style="font-size: 7em; padding-left: 20px" aria-hidden="true"></span></div>
+                <div class="col-xs-5"><span class="fs1 climacon {{ place.icon_class }}" style="font-size: 7em; padding-left: 20px" aria-hidden="true"></span></div>
                 <div class="col-xs-7">
                     <div class="row">&nbsp;</div>
                     <div class="row" style="font-size: 120%">
@@ -87,8 +88,8 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12 text-right">
-                            <div class="text-right" style="font-size: 125%; padding-right: 0; padding-top: 5px; float: right; position:relative">{{ place.summary }}</div>
-                            <div class="text-right" style="font-size: 250%; padding-right: 10px; float: right; position:relative">{{ place.temperature }}&deg;</div>
+                            <div class="text-right" style="font-size: 125%; padding-right: 0; padding-top: 5px; float: right; position:relative">{{ place.summary|space2br }}</div>
+                            <div class="text-right" style="font-size: 310%; padding-right: 10px; float: right; position:relative">{{ place.temperature }}&deg;</div>
                         </div>
                     </div>
                 </div>
