--- a/aircanary/places/templates/places/mobile.html
+++ b/aircanary/places/templates/places/mobile.html
@@ -21,10 +21,10 @@
         .rounded-border { border: 1px solid #60bd22; padding: 3px 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
     </style>
 </head>
-<body class="aqi-green" style="height: 100%">
+<body class="{{ place.combined.css }}" style="height: 100%">
 
 
-<nav class="navbar navbar-default aqi-yellow" role="navigation" style="margin-bottom: 0">
+    <nav class="navbar navbar-default {{ place.combined.css }}" role="navigation" style="margin-bottom: 0">
     <div class="container-fluid">
 
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -76,7 +76,7 @@
 
 
 <div class="container" style="height: 89%">
-    <div class="row aqi-yellow" style="height: 48%">
+    <div class="row {{ place.combined.css }}" style="height: 48%">
         <div class="col-xs-12">
             <div class="row" style="padding: 20px; color: #eee; font-size: 120%">Currently</div>
             <div class="row" style="padding: 0">
@@ -101,12 +101,12 @@
             <div class="row" style="height: 100%; font-size: 1.1em">
                 <div class="col-xs-4 vcontainer">
                     <div class="vcontent">
-                        <div>PM2.5 <span class="rounded-border">{{ place.pm25 }}</span></div>
+                        <div>PM2.5 <span class="rounded-border">{{ place.pm25.value }}</span></div>
                     </div>
                 </div>
                 <div class="col-xs-4 vcontainer">
                     <div class="vcontent">
-                        <div>Ozone <span class="rounded-border">{{ place.ozone }}</span></div>
+                        <div>Ozone <span class="rounded-border">{{ place.ozone.value }}</span></div>
                     </div>
                 </div>
                 <div class="col-xs-4 text-right vcontainer">
@@ -120,20 +120,20 @@
             </div>
         </div>
     </div>
-    <div class="row aqi-red" style="height: 20%">
+    <div class="row {{ place.today.css }}" style="height: 20%; border-bottom: 1px solid #333">
         <div class="col-xs-6 vcontainer">
             <div class="vcontent" style="font-size: 150%">Today</div>
         </div>
         <div class="col-xs-6 text-right vcontainer">
-            <div class="vcontent">Unhealthy {{ place.today }}</div>
+            <div class="vcontent">{{ place.today.label }}</div>
         </div>
     </div>
-    <div class="row aqi-maroon" style="height: 20%">
+    <div class="row {{ place.tomorrow.css }}" style="height: 20%">
         <div class="col-xs-6 vcontainer">
             <div class="vcontent" style="font-size: 150%">Tomorrow</div>
         </div>
         <div class="col-xs-6 text-right vcontainer">
-            <div class="vcontent">Very Unhealthy {{ place.tomorrow }}</div>
+            <div class="vcontent">{{ place.tomorrow.label }}</div>
         </div>
     </div>
 </div>
