--- a/aircanary/places/templates/places/desktop.html
+++ b/aircanary/places/templates/places/desktop.html
@@ -21,119 +21,58 @@
         .rounded-border { border: 1px solid #60bd22; padding: 3px 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
     </style>
 </head>
-<body class="{{ place.combined.css }}" style="height: 100%">
+<body style="background: #eee">
 
 
-    <nav class="navbar navbar-default {{ place.combined.css }}" role="navigation" style="margin-bottom: 0">
-    <div class="container-fluid">
+<div class="container" style="background: #fff">
+    <div class="row" style="color: #333; padding: 10px">
+        <div class="col-xs-3" style="color: #333">AirCanary</div>
+        <div class="col-xs-3" style="color: #333"><input type="text"></div>
+        <div class="col-xs-6" style="color: #333">About API Contact</div>
+    </div>
+</div>
 
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <div style="float: left; width: 25%">
-                <div style="padding-left: 10px">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menu-navbar-collapse" style="float: left; border-width: 0">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar" style="background-color: #eee"></span>
-                        <span class="icon-bar" style="background-color: #eee"></span>
-                        <span class="icon-bar" style="background-color: #eee"></span>
-                    </button>
+<div class="container">
+    <div class="row {{ place.combined.css }}" style="padding: 20px 0 20px 0">
+        <div class="col-xs-6">
+            <div class="row">
+                <div class="col-xs-5" style="text-align: right">
+                    <!-- Climacon -->
+                    <span class="fs1 climacon {{ place.icon_class }}" style="font-size: 13em; padding-left: 20px; margin-bottom: -100px; display: inline-block" aria-hidden="true"></span>
                 </div>
-            </div>
-
-            <div style="float: left; width: 50%; text-align: center"><a class="navbar-brand" href="#" style="width: 100%; font-size: 200%; color: #fff">AirCanary</a></div>
-
-            <div style="float: left; width: 25%; text-align: right">
-                <div style="float: right">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#search-navbar-collapse" style="border-width: 0; float: left">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="glyphicon glyphicon-search" style="font-size: 150%"></span>
-                    </button>
-                </div>
-            </div>
-
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="search-navbar-collapse">
-            <form class="navbar-form navbar-left" role="search">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
-                </div>
-                <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-        </div><!-- /.navbar-collapse -->
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="menu-navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">About</a></li>
-                <li><a href="#">Api</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
-
-
-<div class="container" style="height: 89%">
-    <div class="row {{ place.combined.css }}" style="height: 48%">
-        <div class="col-xs-12">
-            <div class="row" style="padding: 20px; color: #eee; font-size: 120%">Currently</div>
-            <div class="row" style="padding: 0">
-                <div class="col-xs-5"><span class="fs1 climacon {{ place.icon_class }}" style="font-size: 7em; padding-left: 20px" aria-hidden="true"></span></div>
-                <div class="col-xs-7">
-                    <div class="row">&nbsp;</div>
-                    <div class="row" style="font-size: 120%">
-                        <div class="col-xs-12 text-right">{{ place.name }}</div>
+                <div class="col-xs-7" style="padding-top: 30px">
+                    <!-- currently -->
+                    <div style="text-align:right; color: #eee">Currently</div>
+                    <div style="text-align: right; font-size: 1.8em">{{ place.name }}</div>
+                    <div style="text-align: right">
+                        <span style="font-size: 3em">{{ place.temperature }}&deg;</span>
+                        <span style="font-size: 1.1em; width: 65px; display: inline-block; text-tranform: uppercase">{{ place.summary|space2br }}</span>
                     </div>
                     <div class="row">
-                        <div class="col-xs-12 text-right">
-                            <div class="text-right" style="font-size: 125%; padding-right: 0; padding-top: 5px; float: right; position:relative">{{ place.summary|space2br }}</div>
-                            <div class="text-right" style="font-size: 310%; padding-right: 10px; float: right; position:relative">{{ place.temperature }}&deg;</div>
+                        <div class="col-xs-2">&nbsp;</div>
+                        <div class="col-xs-5 vcontainer" style="background: #009900; padding: 5px; text-align: center">
+                            <div class="vcontent">
+                                <div>PM2.5 <span class="rounded-border">{{ place.pm25.value }}</span></div>
+                            </div>
+                        </div>
+                        <div class="col-xs-5 vcontainer" style="background: #009900; padding: 5px; text-align: center">
+                            <div class="vcontent">
+                                <div>Ozone <span class="rounded-border">{{ place.ozone.value }}</span></div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row" style="background-color: #333; height: 12%">
-        <div class="col-xs-12" style="height: 100%">
-            <div class="row" style="height: 100%; font-size: 1.1em">
-                <div class="col-xs-4 vcontainer">
-                    <div class="vcontent">
-                        <div>PM2.5 <span class="rounded-border">{{ place.pm25.value }}</span></div>
-                    </div>
-                </div>
-                <div class="col-xs-4 vcontainer">
-                    <div class="vcontent">
-                        <div>Ozone <span class="rounded-border">{{ place.ozone.value }}</span></div>
-                    </div>
-                </div>
-                <div class="col-xs-4 text-right vcontainer">
-                    <div class="vcontent">
-                        <div style="display: inline-block; text-align: center">
-                            <div><span class="glyphicon glyphicon-stats"></span></div>
-                            <div style="margin-top: -5px"><span style="font-size: 90%">Details</span></div>
-                        </div>
-                    </div>
-                </div>
+        <div class="col-xs-6" style="padding-top: 30px">
+            <div class="row" style="margin-bottom: 20px">
+                <div class="col-xs-3"></div>
+                <div class="col-xs-6 {{ place.today.css }}" style="padding: 20px; text-align: center; border: 1px solid #eee">Today</div>
             </div>
-        </div>
-    </div>
-    <div class="row {{ place.today.css }}" style="height: 20%; border-bottom: 1px solid #333">
-        <div class="col-xs-6 vcontainer">
-            <div class="vcontent" style="font-size: 150%">Today</div>
-        </div>
-        <div class="col-xs-6 text-right vcontainer">
-            <div class="vcontent">{{ place.today.label }}</div>
-        </div>
-    </div>
-    <div class="row {{ place.tomorrow.css }}" style="height: 20%">
-        <div class="col-xs-6 vcontainer">
-            <div class="vcontent" style="font-size: 150%">Tomorrow</div>
-        </div>
-        <div class="col-xs-6 text-right vcontainer">
-            <div class="vcontent">{{ place.tomorrow.label }}</div>
+            <div class="row" style="margin-bottom: 20px">
+                <div class="col-xs-3"></div>
+                <div class="col-xs-6 {{ place.tomorrow.css }}" style="padding: 20px; text-align: center; border: 1px solid #eee">Tomorrow</div>
+            </div>
         </div>
     </div>
 </div>
